"1. Collection API Улучшения [#149139]"