@@ -2,43 +2,41 @@ package ru.job4j.collection.set;
 
 import org.junit.Test;
 
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 
 import static org.hamcrest.core.Is.is;
-import static org.junit.Assert.*;
+import static org.junit.Assert.assertThat;
 
 public class NotifyAccountTest {
 
     @Test
     public void sent() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("123", "Petr Arsentev", "eDer3432f"),
                 new Account("142", "Petr Arsentev", "000001")
         );
-        HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
-                        new Account("123", "Petr Arsentev", "eDer3432f"),
-                        new Account("142", "Petr Arsentev", "000001")
-                )
+        HashSet<Account> expect = new HashSet<>(Set.of(
+                new Account("123", "Petr Arsentev", "eDer3432f"),
+                new Account("142", "Petr Arsentev", "000001"))
         );
         assertThat(NotifyAccount.sent(accounts), is(expect));
     }
 
     @Test
     public void sentToUnique() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("323", "Petr Arsentev", "1983350"),
                 new Account("142", "Petr Arsentev", "100001"),
                 new Account("142", "Petr Arsentev", "100001"),
                 new Account("342", "Petr Arsentev", "105001")
         );
         HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
-                        new Account("323", "Petr Arsentev", "1983350"),
-                        new Account("142", "Petr Arsentev", "100001"),
-                        new Account("342", "Petr Arsentev", "105001")
+                Set.of(
+                new Account("323", "Petr Arsentev", "1983350"),
+                new Account("142", "Petr Arsentev", "100001"),
+                new Account("342", "Petr Arsentev", "105001")
                 )
         );
         assertThat(NotifyAccount.sent(accounts), is(expect));
