@@ -3,7 +3,6 @@ package ru.job4j.collection.sort;
 import org.junit.Test;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
 
@@ -14,18 +13,20 @@ import static org.junit.Assert.assertThat;
 public class JobDescByNameTest {
     @Test
     public void sortDescByNameTest() {
-        List<Job> jobs = Arrays.asList(
-                new Job("One bug", 1),
-                new Job("Two bug", 4),
-                new Job("Fix bug", 2),
-                new Job("X task", 0)
+        List<Job> jobs = new ArrayList<>(
+                List.of(
+                        new Job("One bug", 1),
+                        new Job("Two bug", 4),
+                        new Job("Fix bug", 2),
+                        new Job("X task", 0)
+                )
         );
         jobs.sort(new JobDescByName());
         List<String> jobNames = new ArrayList<>();
         for (Job job : jobs) {
             jobNames.add(job.getName());
         }
-        List<String> expected = Arrays.asList("X task", "Two bug", "One bug", "Fix bug");
+        List<String> expected = List.of("X task", "Two bug", "One bug", "Fix bug");
         assertThat(jobNames, is(expected));
     }
 
